[build-system]
requires = [
  "python_version>=3.7",
  "setuptools>=42",
  "wheel",
  "pybind11>=2.8.0",
  "@TORCH_DEPENDENCY@",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Required to supress a warning from the package `ruamel` using a deprecated pkg_resources function.
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*",
    # Deprecation warnings from pillow in torchvision.
    "ignore:.*Pillow.*:DeprecationWarning:torchvision",
]
